Codificacion de la cabecera con logo y barra de navegacion

--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-AR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ContaBlix: Tu Estudio contable digital</title>
-    <link rel="stylesheet" href="styles/styles.css">
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>ContaBlix: Tu estudio contable digital</title>
+    <meta name="description" content="Servicios contables y fiscales para monotributistas y PyMEs." />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    <header>
-        <img src="img/logo.png" alt="logo" width="11%">
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Productos y Servicios</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
 
+<body class="bg-slate-800 text-slate-100 box-border font-sans p-1">
+    <header class="bg-gray-900 flex flex-wrap items-center justify-evenly">
+        <a class="logo m-2 ml-10 w-[90px] h-[90px]" href="index.html">
+            <img src="img/logo.png" alt="Logo de ContaBlix">
+        </a>
+        <h2 class="font-semibold">BIENVENIDO a tu estudio contable digital</h2>
+
+        <nav class="m-2">
+            <ul class="flex flex-wrap justify-center text-xl font-semibold">
+                <li><a class="mx-4 p-2 hover:bg-gray-600 rounded-lg" href="#">Nosotros</a></li>
+                <li><a class="mx-4 p-2 hover:bg-gray-600 rounded-lg" href="#">Servicios</a></li>
+                <li><a class="mx-4 p-2 hover:bg-gray-600 rounded-lg" href="#">Contacto</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
-
+        <section class="text-center">
+            <img class="opacity-33" src="img/portada.jpg" alt="portada">
+            <h1>Tu estudio contable digital</h1>
+            <p>Asesoría fiscal, contable y financiera para monotributistas y PyMEs.</p>
+            <br>
+            <a class="" href="#">Conocer servicios</a>
+            <br>
+        </section>
     </main>
 
-    <footer>
-
+    <footer class="text-center">
+        <p>© 2025 ContaBlix — Todos los derechos reservados.</p>
     </footer>
-    
+
 </body>
+
 </html>
