Codificacion de la info principal y general de la empresa

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="bg-slate-800 text-white box-border font-sans p-1">
     <header class="bg-gray-900 flex flex-wrap items-center justify-evenly">
-        <a class="logo m-2 ml-10 w-[66px] h-[66px]" href="index.html">
+        <a class="m-2 ml-10 w-[66px] h-[66px]" href="index.html">
             <img src="img/logo.png" alt="Logo de ContaBlix">
         </a>
         <h2 class="font-semibold">BIENVENIDO a tu estudio contable digital</h2>
@@ -31,33 +31,46 @@
 
     <main>
         <section class="relative">
-            <img class="opacity-55 max-h-100 object-cover" src="img/portada.jpg" alt="portada" width="100%">
+            <img class="opacity-44 max-h-100 object-cover" src="img/portada.jpg" alt="portada" width="100%">
             <article class="text-center text-white absolute inset-0 content-center">
                 <h1 class="text-3xl font-bold m-5">Tu estudio contable digital</h1>
-                <h2 class="text-xl font-semibold m-4">Asesoría fiscal, contable y financiera para monotributistas y
-                    PyMEs.</h2>
-                <br>
-                <a class="m-2 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Conocer nuestros
-                    servicios</a>
-                <br>
+                <h2 class="text-xl font-semibold m-10">Asesoría fiscal, contable y financiera para monotributistas, autonomos y PyMEs
+                </h2>
+                <a class="m-3 p-3 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Solicitar Presupuesto
+                </a>
         </section>
 
-        <section class="p-2">
-            <h2 class="text-xl font-bold text-center m-1">¿Quiénes somos?</h2>
-            <p class="text-gray-300 text-center p-2">
-                En <strong>ContaBlix</strong> transformamos la contabilidad tradicional en una experiencia 100%
-                digital.
-                Ofrecemos asesoría fiscal, contable y financiera diseñada para monotributistas y PyMEs que buscan
-                <strong>simplificar su gestión, ahorrar tiempo y tomar mejores decisiones</strong>.
+        <section class="p-2 text-center">
+            <h2 class="text-xl font-bold m-1">¿Quiénes somos?</h2>
+            <p class="text-gray-100 p-2">
+                🚀 ¡Soy ContaBlix!
                 <br>
-                <strong>Nuestro objetivo:</strong> que te enfoques en hacer crecer tu negocio, mientras nosotros nos ocupamos de los
-                números.
+                Consultora contable digital pensada para vos: Monotributista, emprendedor o PyME.
+                <br>
+                Te ayudamos a mantener tus números en orden, cumplir con el fisco, pagar sueldos, organizar tus finanzas
+                y mucho más.
             </p>
-            <br>
+            <p class="text-gray-100 text-center p-2">Ofrecemos asesoramiento contable, fiscal, laboral y financiero para
+                contribuyentes que desean orden, claridad y acompañamiento en su negocio
+            </p>
+            <p class="text-gray-100 text-center p-2">
+                💼 Asesoría contable digital para monotributistas, autónomos y PyMEs
+                <br>
+                📊 Fiscal · Laboral · Economico-Financiero · Impositiva
+                <br>
+                💻 100% online – Simple. Claro. Profesional.
+            </p>
+
+            <p class="text-xl font-semibold p-2">
+                Nos encargamos de los números para que vos te enfoques en crecer
+            </p>
+            <a class="inline-block m-1 p-1 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Ver Nuestros Servicios
+            </a>
         </section>
     </main>
 
-    <footer class="text-center">
+    <footer class="text-center justify-items-center">
+        <img class="w-22 h-22 m-1" src="img/logo.png" alt="Logo de ContaBlix">
         <p>© 2025 ContaBlix — Todos los derechos reservados.</p>
     </footer>
 
