Codificacion del footer con info de contacto

--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
                 <br>
                 Consultora contable digital pensada para vos: Monotributista, emprendedor o PyME.
                 <br>
-                Te ayudamos a mantener tus números en orden, cumplir con el fisco, pagar sueldos, organizar tus finanzas
-                y mucho más.
+                Te ayudamos a mantener tus números en orden, cumplir con el fisco, pagar sueldos, organizar tus finanzas y mucho más.
             </p>
-            <p class="text-gray-100 text-center p-2">Ofrecemos asesoramiento contable, fiscal, laboral y financiero para
-                contribuyentes que desean orden, claridad y acompañamiento en su negocio
+            <p class="text-gray-100 text-center p-2">Ofrecemos asesoramiento contable, fiscal, laboral y financiero paracontribuyentes que desean orden, claridad y acompañamiento en su negocio
             </p>
             <p class="text-gray-100 text-center p-2">
                 💼 Asesoría contable digital para monotributistas, autónomos y PyMEs
@@ -64,14 +62,30 @@
             <p class="text-xl font-semibold p-2">
                 Nos encargamos de los números para que vos te enfoques en crecer
             </p>
-            <a class="inline-block m-1 p-1 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Ver Nuestros Servicios
+            <a class="inline-block m-1 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Nuestros Servicios
             </a>
         </section>
     </main>
 
-    <footer class="text-center justify-items-center">
-        <img class="w-22 h-22 m-1" src="img/logo.png" alt="Logo de ContaBlix">
-        <p>© 2025 ContaBlix — Todos los derechos reservados.</p>
+    <footer class="bg-gray-700 p-1 flex flex-wrap justify-evenly items-center">
+        <div class="m-1">
+            <figure class="flex m-2"><img src="img/correo-electronico.png" alt="email" width="32px" height="32px">
+            <p class="mx-1">contablix.cat@gmail.com</p></figure>
+            <figure class="flex m-2"><img src="img/telefono-movil.png" alt="telefono" width="32px" height="32px">
+            <p class="mx-1">+54 9 (383) 4786245</p></figure>
+            <figure class="flex m-2"><img src="img/ubicacion.png" alt="telefono" width="32px" height="32px">
+            <p class="mx-1">Av. Belgrano 533 - Depto. 2B</p></figure>
+            <figure class="flex m-2"><img src="img/reloj.png" alt="telefono" width="32px" height="32px">
+            <p class="mx-1">Lunes a viernes de 8 a 19h</p></figure>
+        </div>
+
+        <a class="inline-block m-1 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Contactanos
+            </a>
+
+        <figure class="m-1 justify-items-center">
+            <img class="w-22 h-22 m-1" src="img/logo.png" alt="Logo de ContaBlix">
+            <p>© 2025 ContaBlix — Todos los derechos reservados.</p>
+        </figure>
     </footer>
 
 </body>
