Optimizacion del archivo HTML para pagina principal (index)

--- a/index.html
+++ b/index.html
@@ -12,46 +12,46 @@
 
 </head>
 
-<body class="bg-slate-800 text-white box-border font-sans p-1">
-    <header class="bg-gray-900 flex flex-wrap items-center justify-evenly">
-        <a class="m-2 ml-10 w-[66px] h-[66px]" href="index.html">
-            <img src="img/logo.png" alt="Logo de ContaBlix">
+<body class="bg-gradient-to-b from-gray-900 to bg-gray-100 text-white text-center box-border font-sans p-1">
+    <header class="flex flex-wrap items-center justify-evenly">
+        <a class="m-1 w-[66px] h-[66px]" href="index.html">
+            <img src="img/logo.png" alt="Logo">
         </a>
         <h2 class="font-semibold">BIENVENIDO a tu estudio contable digital</h2>
 
-        <nav class="m-2">
-            <ul class="flex flex-wrap justify-center text-xl font-semibold">
+        <nav class="m-2 text-xl font-semibold">
+            <ul class="flex flex-wrap justify-center gap-x-11">
                 <!--VER MENU CON ICONO DESPLEGABLE PARA MODO MOBILE-->
-                <li><a class="mx-4 p-2 hover:bg-gray-600 rounded-lg" href="#">Nosotros</a></li>
-                <li><a class="mx-4 p-2 hover:bg-gray-600 rounded-lg" href="#">Servicios</a></li>
-                <li><a class="mx-4 p-2 hover:bg-gray-600 rounded-lg" href="#">Contacto</a></li>
+                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="#">Nosotros</a></li>
+                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="#">Servicios</a></li>
+                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main class="px-1">
         <section class="relative">
             <img class="opacity-44 max-h-100 object-cover" src="img/portada.jpg" alt="portada" width="100%">
-            <article class="text-center text-white absolute inset-0 content-center">
-                <h1 class="text-3xl font-bold m-5">Tu estudio contable digital</h1>
-                <h2 class="text-xl font-semibold m-10">Asesoría fiscal, contable y financiera para monotributistas, autonomos y PyMEs
+            <article class="absolute inset-0 content-center space-y-11">
+                <h1 class="text-3xl font-bold">Tu estudio contable digital</h1>
+                <h2 class="text-2xl font-semibold">Asesoría fiscal, contable y financiera para monotributistas, autonomos y PyMEs
                 </h2>
-                <a class="m-3 p-3 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Solicitar Presupuesto
+                <a class="p-3 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Solicitar Presupuesto
                 </a>
         </section>
 
-        <section class="p-2 text-center">
-            <h2 class="text-xl font-bold m-1">¿Quiénes somos?</h2>
-            <p class="text-gray-100 p-2">
+        <section class="text-center text-black space-y-5">
+            <h2 class="text-xl font-bold m-4">¿Quiénes somos?</h2>
+            <p class="text-xl">
                 🚀 ¡Soy ContaBlix!
                 <br>
                 Consultora contable digital pensada para vos: Monotributista, emprendedor o PyME.
                 <br>
                 Te ayudamos a mantener tus números en orden, cumplir con el fisco, pagar sueldos, organizar tus finanzas y mucho más.
             </p>
-            <p class="text-gray-100 text-center p-2">Ofrecemos asesoramiento contable, fiscal, laboral y financiero paracontribuyentes que desean orden, claridad y acompañamiento en su negocio
+            <p class="text-xl">Ofrecemos asesoramiento contable, fiscal, laboral y financiero para contribuyentes que desean orden, claridad y acompañamiento en su negocio
             </p>
-            <p class="text-gray-100 text-center p-2">
+            <p class="text-xl">
                 💼 Asesoría contable digital para monotributistas, autónomos y PyMEs
                 <br>
                 📊 Fiscal · Laboral · Economico-Financiero · Impositiva
@@ -59,33 +59,35 @@
                 💻 100% online – Simple. Claro. Profesional.
             </p>
 
-            <p class="text-xl font-semibold p-2">
+            <p class="text-2xl font-semibold p-2">
                 Nos encargamos de los números para que vos te enfoques en crecer
             </p>
-            <a class="inline-block m-1 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Nuestros Servicios
+            <a class="inline-block m-1 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg text-white" href="#">Nuestros Servicios
             </a>
         </section>
     </main>
-
-    <footer class="bg-gray-700 p-1 flex flex-wrap justify-evenly items-center">
-        <div class="m-1">
-            <figure class="flex m-2"><img src="img/correo-electronico.png" alt="email" width="32px" height="32px">
-            <p class="mx-1">contablix.cat@gmail.com</p></figure>
-            <figure class="flex m-2"><img src="img/telefono-movil.png" alt="telefono" width="32px" height="32px">
+    
+    <!--VER CONTACTO EN REDES SOCIALES (FACEBOOK E INSTAGRAM)-->
+    <footer class="flex flex-wrap justify-evenly">
+        <div class="text-gray-950 ">
+            <figure class="flex m-3"><img src="img/correo-electronico.png" alt="email" width="32px" height="32px">
+            <p class="mx-2">contablix.cat@gmail.com</p></figure>
+            <figure class="flex m-3"><img src="img/telefono-movil.png" alt="telefono" width="32px" height="32px">
             <p class="mx-1">+54 9 (383) 4786245</p></figure>
-            <figure class="flex m-2"><img src="img/ubicacion.png" alt="telefono" width="32px" height="32px">
+            <figure class="flex m-3"><img src="img/ubicacion.png" alt="telefono" width="32px" height="32px">
             <p class="mx-1">Av. Belgrano 533 - Depto. 2B</p></figure>
-            <figure class="flex m-2"><img src="img/reloj.png" alt="telefono" width="32px" height="32px">
+            <figure class="flex m-3"><img src="img/reloj.png" alt="telefono" width="32px" height="32px">
             <p class="mx-1">Lunes a viernes de 8 a 19h</p></figure>
         </div>
 
-        <a class="inline-block m-1 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Contactanos
-            </a>
-
-        <figure class="m-1 justify-items-center">
-            <img class="w-22 h-22 m-1" src="img/logo.png" alt="Logo de ContaBlix">
-            <p>© 2025 ContaBlix — Todos los derechos reservados.</p>
-        </figure>
+        <div>
+            <a class="inline-block m-2 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Contactanos
+                </a>
+            <figure class="m-1 justify-items-center text-black">
+                <img class="w-22 h-22 m-1" src="img/logo.png" alt="Logo de ContaBlix">
+                <p>© 2025 ContaBlix — Todos los derechos reservados.</p>
+            </figure>
+        </div>
     </footer>
 
 </body>
