--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 </head>
 
-<body class="bg-gradient-to-b from-gray-900 to bg-gray-100 text-white text-center box-border font-sans p-1">
+<body
+    class="bg-gradient-to-b from-gray-900 to bg-gray-100 text-white text-center box-border font-sans p-1 justify-center content-center">
     <header class="flex flex-wrap items-center justify-evenly">
         <a class="m-1 w-[66px] h-[66px]" href="index.html">
             <img src="img/logo.png" alt="Logo">
@@ -30,29 +31,28 @@
     </header>
 
     <main class="px-1">
-        <section class="relative">
-            <img class="opacity-44 max-h-100 object-cover" src="img/portada.jpg" alt="portada" width="100%">
-            <article class="absolute inset-0 content-center space-y-11">
+        <section class="relative flex items-center justify-center h-70 md:h-80 lg:h-96 overflow-hidden">
+            <img class="absolute object-center object-cover w-full opacity-35" src="img/portada.jpg" alt="portada">
+            <article class="space-y-11 relative">
                 <h1 class="text-3xl font-bold">Tu estudio contable digital</h1>
                 <h2 class="text-2xl font-semibold">Asesoría fiscal, contable y financiera para monotributistas, autonomos y PyMEs
                 </h2>
                 <a class="p-3 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Solicitar Presupuesto
                 </a>
+            </article>
         </section>
 
-        <section class="text-center text-black space-y-5">
-            <h2 class="text-xl font-bold m-4">¿Quiénes somos?</h2>
-            <p class="text-xl">
-                🚀 ¡Soy ContaBlix!
+        <section class="text-xl text-center text-black space-y-5">
+            <h2 class="font-bold m-4">¿Quiénes somos?</h2>
+            <p>🚀 ¡Soy ContaBlix!
                 <br>
                 Consultora contable digital pensada para vos: Monotributista, emprendedor o PyME.
                 <br>
                 Te ayudamos a mantener tus números en orden, cumplir con el fisco, pagar sueldos, organizar tus finanzas y mucho más.
             </p>
-            <p class="text-xl">Ofrecemos asesoramiento contable, fiscal, laboral y financiero para contribuyentes que desean orden, claridad y acompañamiento en su negocio
+            <p>Ofrecemos asesoramiento contable, fiscal, laboral y financiero para contribuyentes que desean orden, claridad y acompañamiento en su negocio
             </p>
-            <p class="text-xl">
-                💼 Asesoría contable digital para monotributistas, autónomos y PyMEs
+            <p>💼 Asesoría contable digital para monotributistas, autónomos y PyMEs
                 <br>
                 📊 Fiscal · Laboral · Economico-Financiero · Impositiva
                 <br>
@@ -62,32 +62,37 @@
             <p class="text-2xl font-semibold p-2">
                 Nos encargamos de los números para que vos te enfoques en crecer
             </p>
-            <a class="inline-block m-1 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg text-white" href="#">Nuestros Servicios
+            <a class="inline-block m-1 p-2 text-base font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg text-white"
+                href="#">Nuestros Servicios
             </a>
         </section>
     </main>
-    
+
     <!--VER CONTACTO EN REDES SOCIALES (FACEBOOK E INSTAGRAM)-->
     <footer class="flex flex-wrap justify-evenly">
-        <div class="text-gray-950 ">
+        <article class="text-gray-950 ">
             <figure class="flex m-3"><img src="img/correo-electronico.png" alt="email" width="32px" height="32px">
-            <p class="mx-2">contablix.cat@gmail.com</p></figure>
+                <p class="mx-2">contablix.cat@gmail.com</p>
+            </figure>
             <figure class="flex m-3"><img src="img/telefono-movil.png" alt="telefono" width="32px" height="32px">
-            <p class="mx-1">+54 9 (383) 4786245</p></figure>
+                <p class="mx-1">+54 9 (383) 4786245</p>
+            </figure>
             <figure class="flex m-3"><img src="img/ubicacion.png" alt="telefono" width="32px" height="32px">
-            <p class="mx-1">Av. Belgrano 533 - Depto. 2B</p></figure>
+                <p class="mx-1">Av. Belgrano 533 - Depto. 2B</p>
+            </figure>
             <figure class="flex m-3"><img src="img/reloj.png" alt="telefono" width="32px" height="32px">
-            <p class="mx-1">Lunes a viernes de 8 a 19h</p></figure>
-        </div>
+                <p class="mx-1">Lunes a viernes de 8 a 19h</p>
+            </figure>
+        </article>
 
-        <div>
+        <article>
             <a class="inline-block m-2 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Contactanos
-                </a>
+            </a>
             <figure class="m-1 justify-items-center text-black">
                 <img class="w-22 h-22 m-1" src="img/logo.png" alt="Logo de ContaBlix">
                 <p>© 2025 ContaBlix — Todos los derechos reservados.</p>
             </figure>
-        </div>
+            </div>
     </footer>
 
 </body>
