--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body
     class="bg-gradient-to-b from-gray-900 to bg-gray-100 text-white text-center box-border font-sans p-1 justify-center content-center">
     <header class="flex flex-wrap items-center justify-evenly">
-        <a class="m-1 w-[66px] h-[66px]" href="index.html">
+        <a class="m-1 w-22 h-22" href="index.html">
             <img src="img/logo.png" alt="Logo">
         </a>
         <h2 class="font-semibold">BIENVENIDO a tu estudio contable digital</h2>
@@ -31,11 +31,13 @@
     </header>
 
     <main class="px-1">
-        <section class="relative flex items-center justify-center h-70 md:h-80 lg:h-96 overflow-hidden">
-            <img class="absolute object-center object-cover w-full opacity-35" src="img/portada.jpg" alt="portada">
+        <section
+            class="relative h-[50vh] md:h-[70vh] bg-[url(img/portada.jpg)] bg-cover bg-center flex items-center justify-center">
+            <div class="absolute inset-0 bg-black/50"></div>
             <article class="space-y-11 relative">
                 <h1 class="text-3xl font-bold">Tu estudio contable digital</h1>
-                <h2 class="text-2xl font-semibold">Asesoría fiscal, contable y financiera para monotributistas, autonomos y PyMEs
+                <h2 class="text-2xl font-semibold">Asesoría fiscal, contable y financiera para monotributistas,
+                    autonomos y PyMEs
                 </h2>
                 <a class="p-3 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Solicitar Presupuesto
                 </a>
@@ -48,9 +50,11 @@
                 <br>
                 Consultora contable digital pensada para vos: Monotributista, emprendedor o PyME.
                 <br>
-                Te ayudamos a mantener tus números en orden, cumplir con el fisco, pagar sueldos, organizar tus finanzas y mucho más.
+                Te ayudamos a mantener tus números en orden, cumplir con el fisco, pagar sueldos, organizar tus finanzas
+                y mucho más.
             </p>
-            <p>Ofrecemos asesoramiento contable, fiscal, laboral y financiero para contribuyentes que desean orden, claridad y acompañamiento en su negocio
+            <p>Ofrecemos asesoramiento contable, fiscal, laboral y financiero para contribuyentes que desean orden,
+                claridad y acompañamiento en su negocio
             </p>
             <p>💼 Asesoría contable digital para monotributistas, autónomos y PyMEs
                 <br>
