--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <title>ContaBlix: Tu estudio contable digital</title>
     <meta name="description" content="Servicios contables y fiscales para monotributistas y PyMEs." />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 
     <!--VER MEDIA QUERYS PARA DISPLAY (MOBILE, TABLET Y NOTEBOOK)-->
 
 </head>
 
 <body
-    class="bg-gradient-to-b from-gray-900 to bg-gray-100 text-white text-center box-border font-sans p-1 justify-center content-center">
-    <header class="flex flex-wrap items-center justify-evenly">
+    class="font-[Inter] bg-gradient-to-b from-gray-900 to bg-gray-100 text-white text-center box-border p-1 justify-center content-center">
+    <header class="flex flex-wrap items-center justify-evenly border-b-2 border-b-gray-600">
         <a class="m-1 w-22 h-22" href="index.html">
             <img src="img/logo.png" alt="Logo">
         </a>
@@ -73,30 +78,38 @@
     </main>
 
     <!--VER CONTACTO EN REDES SOCIALES (FACEBOOK E INSTAGRAM)-->
-    <footer class="flex flex-wrap justify-evenly">
-        <article class="text-gray-950 ">
-            <figure class="flex m-3"><img src="img/correo-electronico.png" alt="email" width="32px" height="32px">
-                <p class="mx-2">contablix.cat@gmail.com</p>
-            </figure>
-            <figure class="flex m-3"><img src="img/telefono-movil.png" alt="telefono" width="32px" height="32px">
-                <p class="mx-1">+54 9 (383) 4786245</p>
-            </figure>
-            <figure class="flex m-3"><img src="img/ubicacion.png" alt="telefono" width="32px" height="32px">
-                <p class="mx-1">Av. Belgrano 533 - Depto. 2B</p>
-            </figure>
-            <figure class="flex m-3"><img src="img/reloj.png" alt="telefono" width="32px" height="32px">
-                <p class="mx-1">Lunes a viernes de 8 a 19h</p>
-            </figure>
-        </article>
-
-        <article>
-            <a class="inline-block m-2 p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Contactanos
+    <footer class="text-gray-900 flex flex-wrap justify-evenly border-t-2 border-t-gray-400 mt-11 p-1">
+        <section class="m-2">
+            <a class="text-white inline-block p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Contactanos
             </a>
+            <article class="">
+                <figure class="flex m-3 items-center"><img src="img/correo-electronico.png" alt="email" width="32px" height="32px">
+                    <p class="mx-2">contablix.cat@gmail.com</p>
+                </figure>
+                <figure class="flex m-3 items-center"><img src="img/telefono-movil.png" alt="telefono" width="32px" height="32px">
+                    <p class="mx-1">+54 9 (383) 4786245</p>
+                </figure>
+                <figure class="flex m-3 items-center"><img src="img/ubicacion.png" alt="telefono" width="32px" height="32px">
+                    <p class="mx-1">Av. Belgrano 533 - Depto. 2B</p>
+                </figure>
+                <figure class="flex m-3 items-center"><img src="img/reloj.png" alt="telefono" width="32px" height="32px">
+                    <p class="mx-1">Lunes a viernes de 8 a 19h</p>
+                </figure>
+            </article>
+        </section>
+
+        <section class="content-center">
+            <h3 class="font-semibold">Seguinos en nuestras redes sociales</h3>
+            <article class="flex flex-wrap m-5 justify-center gap-11">
+                <a href=""> <img src="img/facebook.png" alt="facebook" width="32px" height="32px"></a>
+                <a href=""><img src="img/instagram.png" alt="instagram" width="32px" height="32px"></a>
+                <a href=""><img src="img/whatsapp.png" alt="whatsapp" width="32px" height="32px"></a>
+            </article>
             <figure class="m-1 justify-items-center text-black">
                 <img class="w-22 h-22 m-1" src="img/logo.png" alt="Logo de ContaBlix">
                 <p>© 2025 ContaBlix — Todos los derechos reservados.</p>
             </figure>
-            </div>
+        </section>
     </footer>
 
 </body>
