Creacion de estructuras basicas para paginas secundarias y favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ContaBlix: Tu estudio contable digital</title>
     <meta name="description" content="Servicios contables y fiscales para monotributistas y PyMEs." />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,11 +27,12 @@
         <h2 class="font-semibold">BIENVENIDO a tu estudio contable digital</h2>
 
         <nav class="m-2 text-xl font-semibold">
-            <ul class="flex flex-wrap justify-center gap-x-11">
+            <ul class="flex flex-wrap justify-center gap-x-5">
                 <!--VER MENU CON ICONO DESPLEGABLE PARA MODO MOBILE-->
-                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="#">Nosotros</a></li>
-                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="#">Servicios</a></li>
-                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="#">Contacto</a></li>
+                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="index.html">Inicio</a></li>
+                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="nosotros.html">Nosotros</a></li>
+                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="servicios.html">Servicios</a></li>
+                <li><a class="hover:bg-gray-600 rounded-lg p-2" href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -50,18 +52,19 @@
         </section>
 
         <section class="text-xl text-center text-black space-y-5">
-            <h2 class="font-bold m-4">¿Quiénes somos?</h2>
-            <p>🚀 ¡Soy ContaBlix!
-                <br>
+            <h2 class="font-bold m-5">¡Soy ContaBlix!</h2>
+            <p>
                 Consultora contable digital pensada para vos: Monotributista, emprendedor o PyME.
                 <br>
                 Te ayudamos a mantener tus números en orden, cumplir con el fisco, pagar sueldos, organizar tus finanzas
                 y mucho más.
             </p>
-            <p>Ofrecemos asesoramiento contable, fiscal, laboral y financiero para contribuyentes que desean orden,
+            <p>
+                Ofrecemos asesoramiento contable, fiscal, laboral y financiero para contribuyentes que desean orden,
                 claridad y acompañamiento en su negocio
             </p>
-            <p>💼 Asesoría contable digital para monotributistas, autónomos y PyMEs
+            <p>
+                💼 Asesoría contable digital para monotributistas, autónomos y PyMEs
                 <br>
                 📊 Fiscal · Laboral · Economico-Financiero · Impositiva
                 <br>
@@ -77,22 +80,26 @@
         </section>
     </main>
 
-    <!--VER CONTACTO EN REDES SOCIALES (FACEBOOK E INSTAGRAM)-->
     <footer class="text-gray-900 flex flex-wrap justify-evenly border-t-2 border-t-gray-400 mt-11 p-1">
         <section class="m-2">
-            <a class="text-white inline-block p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Contactanos
+            <a class="text-white inline-block p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg"
+                href="#">Contactanos
             </a>
             <article class="">
-                <figure class="flex m-3 items-center"><img src="img/correo-electronico.png" alt="email" width="32px" height="32px">
+                <figure class="flex m-3 items-center"><img src="img/correo-electronico.png" alt="email" width="32px"
+                        height="32px">
                     <p class="mx-2">contablix.cat@gmail.com</p>
                 </figure>
-                <figure class="flex m-3 items-center"><img src="img/telefono-movil.png" alt="telefono" width="32px" height="32px">
+                <figure class="flex m-3 items-center"><img src="img/telefono-movil.png" alt="telefono" width="32px"
+                        height="32px">
                     <p class="mx-1">+54 9 (383) 4786245</p>
                 </figure>
-                <figure class="flex m-3 items-center"><img src="img/ubicacion.png" alt="telefono" width="32px" height="32px">
+                <figure class="flex m-3 items-center"><img src="img/ubicacion.png" alt="telefono" width="32px"
+                        height="32px">
                     <p class="mx-1">Av. Belgrano 533 - Depto. 2B</p>
                 </figure>
-                <figure class="flex m-3 items-center"><img src="img/reloj.png" alt="telefono" width="32px" height="32px">
+                <figure class="flex m-3 items-center"><img src="img/reloj.png" alt="telefono" width="32px"
+                        height="32px">
                     <p class="mx-1">Lunes a viernes de 8 a 19h</p>
                 </figure>
             </article>
@@ -100,6 +107,7 @@
 
         <section class="content-center">
             <h3 class="font-semibold">Seguinos en nuestras redes sociales</h3>
+            <!--VER ICONOS FAVICON DE FONT AWESOME-->
             <article class="flex flex-wrap m-5 justify-center gap-11">
                 <a href=""> <img src="img/facebook.png" alt="facebook" width="32px" height="32px"></a>
                 <a href=""><img src="img/instagram.png" alt="instagram" width="32px" height="32px"></a>
