Desarrollo de la pagina nosotros y servicios

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h2 class="text-2xl font-semibold">Asesoría fiscal, contable y financiera para monotributistas,
                     autonomos y PyMEs
                 </h2>
-                <a class="p-3 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="#">Solicitar Presupuesto
+                <a class="p-3 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="contacto.html">Solicitar Presupuesto
                 </a>
             </article>
         </section>
@@ -75,7 +75,7 @@
                 Nos encargamos de los números para que vos te enfoques en crecer
             </p>
             <a class="inline-block m-1 p-2 text-base font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg text-white"
-                href="#">Nuestros Servicios
+                href="servicios.html">Nuestros Servicios
             </a>
         </section>
     </main>
@@ -83,7 +83,7 @@
     <footer class="text-gray-900 flex flex-wrap justify-evenly border-t-2 border-t-gray-400 mt-11 p-1">
         <section class="m-2">
             <a class="text-white inline-block p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg"
-                href="#">Contactanos
+                href="contacto.html">Contactanos
             </a>
             <article class="">
                 <figure class="flex m-3 items-center"><img src="img/correo-electronico.png" alt="email" width="32px"
