--- a/nosotros.html
+++ b/nosotros.html
@@ -52,8 +52,23 @@
                 En ContaBlix creemos que la contabilidad no solo es cumplir con obligaciones, sino también una
                 herramienta estratégica para crecer.
             </p>
+            <article class="p-2 flex flex-wrap gap-5 justify-center content-center">
+                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                    <h3 class="font-semibold text-2xl m-2">Misión</h3>
+                    <p>Brindar soluciones contables y financieras ágiles, claras y accesibles, ayudando a monotributistas, autónomos y PyMEs a tomar mejores decisiones</p>
+                </div>
+                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                    <h3 class="font-semibold text-2xl m-2">Visión</h3>
+                    <p>Convertirnos en el aliado estratégico de quienes buscan transformar la gestión de su negocio con tecnología y asesoría profesional de confianza.</p>
+                </div>
+                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                    <h3 class="font-semibold text-2xl m-2">Valores</h3>
+                    <p>Transparencia, innovación y compromiso. Creemos en el trabajo cercano y en generar resultados que impulsen el crecimiento de nuestros clientes.</p>
+                </div>
+                <h2 class="text-xl font-semibold text-black p-2">Un equipo joven de contadores y desarrolladores que combina experiencia profesional con herramientas digitales para simplificar tu vida financiera.</h2>
+            </article>
             <a class="inline-block m-1 p-2 text-base font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg text-white"
-                href="#">Nuestros Servicios
+                href="servicios.html">Conoce nuestros servicios
             </a>
         </section>
     </main>
