--- a/servicios.html
+++ b/servicios.html
@@ -35,9 +35,37 @@
     </header>
 
     <main class="px-2 m-2">
+        <section class="text-xl text-center space-y-5">
+            <h2 class="font-bold m-5">Nuestros Servicios</h2>
+            <p>
+                En ContaBlix ofrecemos un enfoque moderno y digital para la gestión contable, fiscal y financiera. 
+                <br>
+                Nuestro objetivo es simplificar tus obligaciones y potenciar tu negocio con soluciones claras, accesibles y personalizadas. 
+                <br>
+                Ya seas monotributista, autónomo o PyME, ponemos a tu disposición un equipo de profesionales que te acompaña en cada paso, ayudándote a crecer con seguridad y eficiencia.
+            </p>
+            <article class="p-2 flex flex-wrap gap-5 justify-center content-center">
+                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                    <h3 class="font-semibold text-2xl m-2">Fiscal impositivo</h3>
+                    <p>
+                        
+                    </p>
+                </div>
+                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                    <h3 class="font-semibold text-2xl m-2">Laboral</h3>
+                    <p>
 
-        <!--VER CARDS CON ANIMACION-->
+                    </p>
+                </div>
+                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                    <h3 class="font-semibold text-2xl m-2">Contable</h3>
+                    <p>
 
+                    </p>
+                </div>
+                <h2 class="text-xl font-semibold text-black p-2">Un equipo joven de contadores y desarrolladores que combina experiencia profesional con herramientas digitales para simplificar tu vida financiera.</h2>
+            </article>
+        </section>
     </main>
 
 
