Mejora de la pagina nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -34,34 +34,36 @@
     </header>
 
     <main class="px-2 m-2">
-        <section class="text-xl text-center space-y-5">
+        <section class="text-xl text-center p-2 md:px-33">
             <h2 class="font-bold m-5">Quienes somos?</h2>
-            <p>
-                Somos ContaBlix, tu estudio contable digital.
+            <article>
+                <p>ContaBlix, tu estudio contable digital.</p>
                 <br>
-                Nacimos con la idea de simplificar la gestión contable, fiscal y financiera de monotributistas,
-                autónomos y PyMEs, combinando la experiencia profesional con la innovación tecnológica.
+                <p>
+                    Nacimos con la idea de simplificar la gestión contable, fiscal y financiera de monotributistas,
+                    autónomos y PyMEs, combinando la experiencia profesional con la innovación tecnológica.
+                </p>
                 <br>
-                Nuestro objetivo es que te concentres en hacer crecer tu negocio mientras nosotros nos ocupamos de la
-                parte contable. Trabajamos 100% online, con herramientas modernas que permiten agilizar trámites,
-                mantener la documentación al día y ofrecerte información financiera clara para la toma de decisiones.
+                <p>
+                    Nuestro objetivo es que te concentres en hacer crecer tu negocio
+                    mientras nosotros nos ocupamos de la
+                    parte contable. Trabajamos 100% online, con herramientas modernas que permiten agilizar trámites, mantener la documentación al día y ofrecerte información financiera clara para la toma de decisiones.
+                </p>
                 <br>
-                Contamos con un equipo de profesionales comprometidos en brindar un servicio ágil, transparente y
-                confiable, adaptado a las necesidades de cada cliente.
+                <p>Contamos con un equipo de profesionales comprometidos en brindar un servicio ágil, transparente y confiable, adaptado a las necesidades de cada cliente.</p>
                 <br>
-                En ContaBlix creemos que la contabilidad no solo es cumplir con obligaciones, sino también una
-                herramienta estratégica para crecer.
-            </p>
-            <article class="p-2 flex flex-wrap gap-5 justify-center content-center">
-                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                <p>En ContaBlix creemos que la contabilidad no solo es cumplir con obligaciones, sino también una herramienta estratégica para crecer.</p>
+            </article>
+            <article class="p-2 m-2 flex flex-wrap gap-10 justify-center content-center">
+                <div class="bg-cyan-900 rounded-xl p-2 w-[300px] hover:bg-cyan-800">
                     <h3 class="font-semibold text-2xl m-2">Misión</h3>
                     <p>Brindar soluciones contables y financieras ágiles, claras y accesibles, ayudando a monotributistas, autónomos y PyMEs a tomar mejores decisiones</p>
                 </div>
-                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                <div class="bg-cyan-900 rounded-xl p-2 w-[300px] hover:bg-cyan-800">
                     <h3 class="font-semibold text-2xl m-2">Visión</h3>
                     <p>Convertirnos en el aliado estratégico de quienes buscan transformar la gestión de su negocio con tecnología y asesoría profesional de confianza.</p>
                 </div>
-                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                <div class="bg-cyan-900 rounded-xl p-2 w-[300px] hover:bg-cyan-800">
                     <h3 class="font-semibold text-2xl m-2">Valores</h3>
                     <p>Transparencia, innovación y compromiso. Creemos en el trabajo cercano y en generar resultados que impulsen el crecimiento de nuestros clientes.</p>
                 </div>
